fix layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,11 @@
   color-scheme: light;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 body {
   background-color: #ffffff;
 }
